--- a/HelloGeometry/imgui.ini
+++ b/HelloGeometry/imgui.ini
@@ -4,7 +4,7 @@ Size=400,400
 Collapsed=0
 
 [Window][Hello, world!]
-Pos=406,77
+Pos=446,29
 Size=345,111
 Collapsed=0
 
@@ -16,5 +16,15 @@ Collapsed=0
 [Window][My First Tool]
 Pos=105,179
 Size=495,368
+Collapsed=0
+
+[Window][Position]
+Pos=8,10
+Size=236,78
+Collapsed=0
+
+[Window][Controller Panel]
+Pos=769,298
+Size=345,375
 Collapsed=0
 
