--- a/HelloGeometry/HelloGeometry.vcxproj.filters
+++ b/HelloGeometry/HelloGeometry.vcxproj.filters
@@ -1,14 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <Filter Include="소스 파일">
-      <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
-      <Extensions>cpp;c;cc;cxx;c++;cppm;ixx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
-    </Filter>
-    <Filter Include="헤더 파일">
-      <UniqueIdentifier>{93995380-89BD-4b04-88EB-625FBE52EBFB}</UniqueIdentifier>
-      <Extensions>h;hh;hpp;hxx;h++;hm;inl;inc;ipp;xsd</Extensions>
-    </Filter>
     <Filter Include="리소스 파일">
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
@@ -16,31 +8,39 @@
     <Filter Include="imgui">
       <UniqueIdentifier>{ca18d9d1-79b2-4099-89cf-bd9db6ffd374}</UniqueIdentifier>
     </Filter>
+    <Filter Include="CPP">
+      <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
+      <Extensions>cpp;c;cc;cxx;c++;cppm;ixx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
+    </Filter>
+    <Filter Include="HEADER">
+      <UniqueIdentifier>{93995380-89BD-4b04-88EB-625FBE52EBFB}</UniqueIdentifier>
+      <Extensions>h;hh;hpp;hxx;h++;hm;inl;inc;ipp;xsd</Extensions>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\include\glad\glad.c">
-      <Filter>헤더 파일</Filter>
+      <Filter>HEADER</Filter>
     </ClCompile>
     <ClCompile Include="Main.cpp">
-      <Filter>소스 파일</Filter>
+      <Filter>CPP</Filter>
     </ClCompile>
     <ClCompile Include="Shader.cpp">
-      <Filter>소스 파일</Filter>
+      <Filter>CPP</Filter>
     </ClCompile>
     <ClCompile Include="..\include\stb_image.c">
       <Filter>리소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="Camera.cpp">
-      <Filter>소스 파일</Filter>
+      <Filter>CPP</Filter>
     </ClCompile>
     <ClCompile Include="Mesh.cpp">
-      <Filter>소스 파일</Filter>
+      <Filter>CPP</Filter>
     </ClCompile>
     <ClCompile Include="Model.cpp">
-      <Filter>소스 파일</Filter>
+      <Filter>CPP</Filter>
     </ClCompile>
     <ClCompile Include="Game.cpp">
-      <Filter>소스 파일</Filter>
+      <Filter>CPP</Filter>
     </ClCompile>
     <ClCompile Include="..\include\imgui\imgui.cpp">
       <Filter>imgui</Filter>
@@ -64,18 +64,18 @@
       <Filter>imgui</Filter>
     </ClCompile>
     <ClCompile Include="UI_Manager.cpp">
-      <Filter>소스 파일</Filter>
+      <Filter>CPP</Filter>
     </ClCompile>
     <ClCompile Include="Grid.cpp">
-      <Filter>소스 파일</Filter>
+      <Filter>CPP</Filter>
     </ClCompile>
     <ClCompile Include="Line.cpp">
-      <Filter>소스 파일</Filter>
+      <Filter>CPP</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Shader.h">
-      <Filter>헤더 파일</Filter>
+      <Filter>HEADER</Filter>
     </ClInclude>
     <ClInclude Include="Camera.h">
       <Filter>리소스 파일</Filter>
@@ -87,7 +87,7 @@
       <Filter>리소스 파일</Filter>
     </ClInclude>
     <ClInclude Include="Game.h">
-      <Filter>헤더 파일</Filter>
+      <Filter>HEADER</Filter>
     </ClInclude>
     <ClInclude Include="..\include\imgui\imconfig.h">
       <Filter>imgui</Filter>
@@ -114,16 +114,16 @@
       <Filter>imgui</Filter>
     </ClInclude>
     <ClInclude Include="Setting.h">
-      <Filter>헤더 파일</Filter>
+      <Filter>HEADER</Filter>
     </ClInclude>
     <ClInclude Include="UI_Manager.h">
-      <Filter>헤더 파일</Filter>
+      <Filter>HEADER</Filter>
     </ClInclude>
     <ClInclude Include="Grid.h">
-      <Filter>헤더 파일</Filter>
+      <Filter>HEADER</Filter>
     </ClInclude>
     <ClInclude Include="Line.h">
-      <Filter>헤더 파일</Filter>
+      <Filter>HEADER</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
